calendar class added for persian calendar

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -14,7 +14,7 @@
     {% endfor %}
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'core:home' %}">
+        <a href="{% url 'core:index' %}">
             <img src="{{phoenix_app.logo}}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
 
