--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,4 +1,5 @@
 {% extends "core/layout.html" %}
+{% load static %}
 {% block content %}
 <div class="row rtl farsi">
     {% for phoenix_app in phoenix_apps %}
@@ -15,7 +16,7 @@
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'core:index' %}">
-            <img src="{{phoenix_app.logo}}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
 
                 Core
