--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -1,53 +1,25 @@
 {% extends "accounting/layout.html" %}
-
-
+{% load static %}
 {% block content %}
-<div class="row">
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-header">
-                <h4>
-                    سلام
-                </h4>
-            </div>
-            <div class="card-body">
-                <h5>
-                    سلام
-                </h5>
-            </div>
-        </div>
+<div class="row rtl farsi">
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:accounts' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                حساب ها
+            </h6>
+        </a>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-header">
-                <h4>
-                    سلام
-                </h4>
-            </div>
-            <div class="card-body">
-                <h5>
-                    سلام
-                </h5>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-header">
-                <h4>
-                    سلام
-                </h4>
-            </div>
-            <div class="card-body">
-                <h5>
-                    سلام
-                </h5>
-            </div>
-        </div>
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:tree_chart' pk=0 %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                نمودار درختی
+            </h6>
+        </a>
     </div>
 </div>
 {% endblock content %}
-
 
 {% block script %}
 
