market app updated

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -106,7 +106,16 @@
               نمایش سایت
             </div>
           </div>
+        </a>&nbsp;/&nbsp;
+         <a href="{{ADMIN_URL}}">
+          <div class="media">
+            <img src="{{app.logo.image}}" class="rounded-circle" width="64px" alt="">
+            <div class="media-body" style="vertical-align: middle;">
+              نمایش ادمین
+            </div>
+          </div>
         </a>
+
 
       </div>
       {% block usertools %}
