--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -18,6 +18,16 @@
             </h6>
         </a>
     </div>
+
+     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:products'  %}">
+            <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+ کالا ها
+            </h6>
+        </a>
+    </div>
+
 </div>
 {% endblock content %}
 
