invoices list OK

--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -19,14 +19,24 @@
         </a>
     </div>
 
-     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:products'  %}">
             <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
- کالا ها
+                کالا ها
             </h6>
         </a>
     </div>
+
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:invoices'  %}">
+            <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                فاکتور ها
+            </h6>
+        </a>
+    </div>
+
 
 </div>
 {% endblock content %}
