--- a/accounting/templates/accounting/react.html
+++ b/accounting/templates/accounting/react.html
@@ -1,99 +1,171 @@
-
 <!DOCTYPE html>
 <html>
-<body>
-  <div id="root"></div>
-</body>
-<!-- This setup is not suitable for production. -->
-<!-- Only use it in development! -->
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script async src="https://ga.jspm.io/npm:es-module-shims@1.7.0/dist/es-module-shims.js"></script>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react?dev",
-    "react-dom/client": "https://esm.sh/react-dom/client?dev"
-  }
-}
-</script>
-<script type="text/babel" data-type="module">
-import React, { StrictMode } from 'react';
-import { createRoot } from 'react-dom/client';
-let list1=['hossein','rauf','shoaib','naser','ahmad'];
-function MyButton() {
-  return (
-    <button>
-      {list1.map(name=><><h4>{name}</h4></>)}
-    </button>
-  );
-}
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta
+      name="author"
+      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
+    />
+    <meta name="generator" content="Jekyll v3.8.5" />
+    <title>React Phoenix</title>
 
-let App = function MyApp() {
-  return (
-    <div>
-      <h1>Welcome to my app</h1>
-      <MyButton />
-    </div>
-  );
-}
+    <link
+      rel="stylesheet"
+      href="https://bootstrap.rtlcss.com/docs/4.2/dist/css/rtl/bootstrap.css"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+  <!-- This setup is not suitable for production. -->
+  <!-- Only use it in development! -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script
+    async
+    src="https://ga.jspm.io/npm:es-module-shims@1.7.0/dist/es-module-shims.js"
+  ></script>
+  <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react?dev",
+        "react-dom/client": "https://esm.sh/react-dom/client?dev"
+      }
+    }
+  </script>
+  <!-- <script>
+ 
+    function MyList(my_list) {
+      return (
+        {
+          my_list.map((list_item) => (
+          <>
+          <div className="col-md-4">
+             {ListItem(list_item)}
+              </div>
+            </>
+          ))}
+      );
+    }
 
+   
+  </script>
+ 
+  -->
 
-const root = createRoot(document.getElementById('root'));
-root.render(
-  <StrictMode>
-    <App />
-  </StrictMode>
-);
-</script>
-<style>
-* {
-  box-sizing: border-box;
-}
+  <script type="text/babel" data-type="module">
+    import React, { StrictMode } from "react";
+    import { createRoot } from "react-dom/client";
+    let my_list = [
+    {
+      name:"hossein",
+      age:19,
+    }, 
+    {
+      name:"rauf",
+      age:52,
+    }, 
+    {
+      name:"shoaib",
+      age:24,
+    }, 
+    {
+      name:"naser",
+      age:12,
+    }, 
+    {
+      name:"ahmad",
+      age:34,
+    }, 
+     ];
+    function ListItem(list_item) {
+      return (
+        <>
+          <div className="card">
+            <div className="card-body">
+              <h4>{list_item.name}</h4>
+              <h3>{list_item.age}</h3>
+              <button ></button>
+            </div>
+          </div>
+        </>
+      );
+    }
 
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
+    function MyList() {
+      return (
+        <>
+          <div className="row">
+            {my_list.map((list_item) => (
+              <>{ListItem(list_item)}</>
+            ))}
+          </div>
+        </>
+      );
+    }
 
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
+    let App = function MyApp() {
+      return <>{MyList()}</>;
+    };
 
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
+    const root = createRoot(document.getElementById("root"));
+    root.render(
+      <StrictMode>
+        <App />
+      </StrictMode>
+    );
+  </script>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
+    body {
+      font-family: sans-serif;
+      margin: 20px;
+      padding: 0;
+    }
 
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
+    h1 {
+      margin-top: 0;
+      font-size: 22px;
+    }
 
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
+    h2 {
+      margin-top: 0;
+      font-size: 20px;
+    }
 
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
+    h3 {
+      margin-top: 0;
+      font-size: 18px;
+    }
 
-code {
-  font-size: 1.2em;
-}
+    h4 {
+      margin-top: 0;
+      font-size: 16px;
+    }
 
-ul {
-  padding-inline-start: 20px;
-}
+    h5 {
+      margin-top: 0;
+      font-size: 14px;
+    }
 
+    h6 {
+      margin-top: 0;
+      font-size: 12px;
+    }
 
-</style>
+    code {
+      font-size: 1.2em;
+    }
+
+    ul {
+      padding-inline-start: 20px;
+    }
+  </style>
 </html>
