--- a/chef/templates/chef/includes/meal-items-app/script.html
+++ b/chef/templates/chef/includes/meal-items-app/script.html
@@ -4,19 +4,23 @@
     el: "#meal-items-app",
     data: {
       meal_items: meal_items_for_meal_items_app,
+      total: 0,
+    },
+    mounted: function () {
+      this.calculate_total();
     },
     methods: {
       to_price: function (vall) {
         return to_price(vall);
       },
-      total: function () {
-        let sum=0
-        this.meal_items.forEach(meal_item => {
-            sum+=meal_item.price*meal_item.quantity
+
+      calculate_total: function () {
+        let sum = 0;
+        this.meal_items.forEach((meal_item) => {
+          sum += meal_item.price * meal_item.quantity;
         });
-        return sum
+        this.total = sum;
       },
-      calculate_total: function () {},
     },
   });
 </script>
