--- a/chef/templates/chef/index.html
+++ b/chef/templates/chef/index.html
@@ -26,6 +26,17 @@
         </a>
     </div>
 
+      <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'chef:report' %}">
+            <img src="{% static 'chef/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+
+                 گزارش
+            </h6>
+        </a>
+    </div>
+
+
 
 </div>
 {% endblock content %}
