--- a/chef/templates/chef/meal.html
+++ b/chef/templates/chef/meal.html
@@ -1,52 +1,52 @@
-
-{% extends "core/layout.html" %}
-{% load static %}
+{% extends "core/layout.html" %} 
+{% load to_price %} 
+{% load static %} 
 {% block content %}
 <div class="row rtl farsi">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-header">
-                <h5>
-                    {{meal.name}}
-                </h5>
-            </div>
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <h5>{{meal.name}}</h5>
+      </div>
 
-              <div class="card-body">
-                <h5>
-                    {{meal.name}}
-                </h5>
-               
-                
-                 <a
-                    target="_blank"
-                    href="{{meal.get_edit_url}}"
-                    title="ویرایش"
-                    class="text-warning mx-2"
-                  >
-                    <i class="fa fa-edit text-warning"> </i>
-                    ویرایش
-                  </a>
-                  <a
-                    target="_blank"
-                    href="{{meal.get_delete_url}}"
-                    title="حذف"
-                    class="text-danger mx-2"
-                  >
-                    <i class="fa fa-trash text-danger"> </i>
-                    حذف
-                  </a>
+      <div class="card-body">
+        <h5>{{meal.name}}</h5>
+        <h5>{{meal.total|to_price}} {{CURRENCY}}</h5>
 
-            </div>
-        </div>
+        <a
+          target="_blank"
+          href="{{meal.get_edit_url}}"
+          title="ویرایش"
+          class="text-warning mx-2"
+        >
+          <i class="fa fa-edit text-warning"> </i>
+          ویرایش
+        </a>
+        <a
+          target="_blank"
+          href="{{meal.get_delete_url}}"
+          title="حذف"
+          class="text-danger mx-2"
+        >
+          <i class="fa fa-trash text-danger"> </i>
+          حذف
+        </a>
+      </div>
     </div>
-    <div class="col-12">
-        {% include "chef/includes/meal-items-app/template.html" %}
-    </div>
+  </div>
+  <div class="col-12">
+    {% include "chef/includes/add-meal-item-app/template.html" %}
+  </div>
+
+  <div class="col-12">
+    {% include "chef/includes/meal-items-app/template.html" %}
+  </div>
 </div>
-{% endblock content %}
-
-
-{% block script %}
-   {% include "chef/includes/meal-items-app/script.html" %}
- 
+{% endblock content %} 
+{% block script %} 
+<script>
+    let meal_id=parseInt("{{meal.id}}")
+</script>
+{% include "chef/includes/add-meal-item-app/script.html" %}
+{% include "chef/includes/meal-items-app/script.html" %} 
 {% endblock script %}
