--- a/chef/templates/chef/includes/meal-items-app/script.html
+++ b/chef/templates/chef/includes/meal-items-app/script.html
@@ -17,7 +17,7 @@
       calculate_total: function () {
         let sum = 0;
         this.meal_items.forEach((meal_item) => {
-          sum += meal_item.price * meal_item.quantity;
+          sum += meal_item.unit_price * meal_item.quantity;
         });
         this.total = sum;
       },
