--- a/chef/templates/chef/meal.html
+++ b/chef/templates/chef/meal.html
@@ -10,8 +10,8 @@
       </div>
 
       <div class="card-body">
-        <h5>{{meal.name}}</h5>
-        <h5>{{meal.total|to_price}} {{CURRENCY}}</h5>
+        <h5>{{meal.title}}</h5>
+        <h5>{{meal.sum_total|to_price}} {{CURRENCY}}</h5>
 
         <a
           target="_blank"
