--- a/chef/templates/chef/includes/add-meal-item-app/script.html
+++ b/chef/templates/chef/includes/add-meal-item-app/script.html
@@ -7,7 +7,8 @@
     data: {
       food_item_id: 0,
       food_items: food_items_for_add_food_items_app,
-      price: 0,
+      unit_price: 0,
+      unit_name: "عدد",
       quantity: 0,
     },
     methods: {
@@ -29,7 +30,8 @@
           meal_id: meal_id,
           food_item_id: this.food_item_id,
           quantity: this.quantity,
-          price: this.price,
+          unit_price: this.unit_price,
+          unit_name: this.unit_name,
         };
 
         console.log(payload);
