deriving mealitem from invoiceline

--- a/chef/templates/chef/includes/add-meal-item-app/script.html
+++ b/chef/templates/chef/includes/add-meal-item-app/script.html
@@ -9,6 +9,7 @@
       food_items: food_items_for_add_food_items_app,
       unit_price: 0,
       unit_name: "عدد",
+      discount_percentage:0,
       quantity: 0,
     },
     methods: {
@@ -32,6 +33,7 @@
           quantity: this.quantity,
           unit_price: this.unit_price,
           unit_name: this.unit_name,
+          discount_percentage: this.discount_percentage,
         };
 
         console.log(payload);
