--- a/chef/templates/chef/meal.html
+++ b/chef/templates/chef/meal.html
@@ -38,6 +38,10 @@
     {% include "chef/includes/add-meal-item-app/template.html" %}
   </div>
 
+   <div class="col-12">
+    {% include "accounting/includes/invoice-lines-app/template.html" %}
+  </div>
+
   <div class="col-12">
     {% include "chef/includes/meal-items-app/template.html" %}
   </div>
@@ -48,5 +52,8 @@
     let meal_id=parseInt("{{meal.id}}")
 </script>
 {% include "chef/includes/add-meal-item-app/script.html" %}
+
+{% include "accounting/includes/invoice-lines-app/script.html" %}
+
 {% include "chef/includes/meal-items-app/script.html" %} 
 {% endblock script %}
