--- a/chef/templates/chef/meal.html
+++ b/chef/templates/chef/meal.html
@@ -3,37 +3,13 @@
 {% load static %} 
 {% block content %}
 <div class="row rtl farsi">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header">
-        <h5>{{meal.name}}</h5>
-      </div>
+    
+   <div class="col-md-4">
+        {% include "accounting/includes/invoice-app/card.html" %}
 
-      <div class="card-body">
-        <h5>{{meal.title}}</h5>
-        <h5>{{meal.sum_total|to_price}} {{CURRENCY}}</h5>
+   </div>
 
-        <a
-          target="_blank"
-          href="{{meal.get_edit_url}}"
-          title="ویرایش"
-          class="text-warning mx-2"
-        >
-          <i class="fa fa-edit text-warning"> </i>
-          ویرایش
-        </a>
-        <a
-          target="_blank"
-          href="{{meal.get_delete_url}}"
-          title="حذف"
-          class="text-danger mx-2"
-        >
-          <i class="fa fa-trash text-danger"> </i>
-          حذف
-        </a>
-      </div>
-    </div>
-  </div>
+  
   <div class="col-12">
     {% include "chef/includes/add-meal-item-app/template.html" %}
   </div>
