--- a/market/templates/market/index.html
+++ b/market/templates/market/index.html
@@ -14,6 +14,17 @@
         </a>
     </div>
 
+     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'market:products' %}">
+            <img src="{% static 'market/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+
+                کالا ها
+            </h6>
+        </a>
+    </div>
+
+
 
 </div>
 {% endblock content %}
