--- a/accounting/templates/accounting/includes/product-app/script.html
+++ b/accounting/templates/accounting/includes/product-app/script.html
@@ -1,1 +1,4 @@
-{% include "core/includes/page-app/script.html" %}
+{% include "accounting/includes/invoice-line-item-app/script.html" %}
+<script>
+  const product_id = parseInt("{{product.id}}");
+</script>
