--- a/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
@@ -1,153 +1,133 @@
 <div id="invoice-lines-app" class="card">
-      <div id="heading-invoice-lines" class="card-header">
-        <h5 class="text-center">
-          <button
-            data-toggle="collapse"
-            data-target="#collapse-invoice-lines"
-            aria-expanded="false"
-            aria-controls="collapse-invoice-lines"
-            class="btn btn-link collapsed"
-          >
-            سطر های فاکتور
-            <span v-if="invoice_lines.length>0" class="mx-2">
-              <small class="text-danger" v-text="invoice_lines.length"></small>
-            </span>
+  {% load to_price %}
+  
 
-            <!---->
-          </button>
-        </h5>
+  <div class="card-body">
+    <div class="table-responsive rtl">
+      <div v-show="invoice_lines.length==0">
+        <h5 class="text-canter text-danger">سطری وجود ندارد.</h5>
       </div>
+      <div v-show="invoice_lines.length>0">
+        <table class="table table-striped farsi rtl">
+          <thead>
+            <th class="bordered farsi text-right">ردیف</th>
+            {% if not invoice_line_item %}
 
-      <div class="card-body">
-        <div class="table-responsive rtl">
-          <div v-show="invoice_lines.length==0">
-            <h5 class="text-canter text-danger">سطری وجود ندارد.</h5>
-          </div>
-          <div v-show="invoice_lines.length>0">
-            <table class="table table-striped farsi rtl">
-              <thead>
-                <th class="bordered farsi text-right">ردیف</th>
-                {% if not invoice_line_item %}
+            <th class="bordered farsi text-right">شرح</th>
+            {% endif %} {% if not invoice %}
 
-                <th class="bordered farsi text-right">شرح</th>
-                {% endif %} {% if not invoice %}
+            <th class="bordered farsi text-right">فاکتور</th>
 
-                <th class="bordered farsi text-right">فاکتور</th>
+            {% endif %}
 
-                {% endif %}
+            <th class="bordered farsi text-right">تعداد</th>
 
-                <th class="bordered farsi text-right">تعداد</th>
+            <th class="bordered farsi text-right">فی</th>
 
-                <th class="bordered farsi text-right">فی</th>
+            <th class="bordered farsi text-right">تخفیف</th>
 
-                <th class="bordered farsi text-right">تخفیف</th>
+            <th class="bordered farsi text-right">
+              مبلغ
+              <small class="text-muted"> ( {{CURRENCY}} ) </small>
+            </th>
+          </thead>
+          <tbody>
+            <tr v-for="invoice_line in invoice_lines">
+              <td class="bordered farsi text-right">
+                <a :href="invoice_line.get_absolute_url">
+                  <span v-text="invoice_line.row"></span>
+                </a>
+              </td>
 
-                <th class="bordered farsi text-right">
-                  مبلغ
-                  <small class="text-muted"> ( {{CURRENCY}} ) </small>
-                </th>
-              </thead>
-              <tbody>
-                <tr v-for="invoice_line in invoice_lines">
-                  <td class="bordered farsi text-right">
-                    <a :href="invoice_line.get_absolute_url">
-                      <span v-text="invoice_line.row"></span>
-                    </a>
-                  </td>
+              {% if not invoice_line_item %}
 
-                  {% if not invoice_line_item %}
-
-                  <td class="bordered farsi text-right">
-                    <a :href="invoice_line.invoice_line_item.get_absolute_url">
-                      <div class="media text-right farsi">
-                        <img
-                          width="32"
-                          :src="invoice_line.invoice_line_item.thumbnail"
-                          alt=""
-                        />
-                        <div class="media-body mr-2">
-                          <span
-                            v-text="invoice_line.invoice_line_item.title"
-                          ></span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  {% endif %} {% if not invoice %}
-                  <td class="bordered farsi text-right">
-                    <a :href="invoice_line.invoice.get_absolute_url">
-                      <span v-text="invoice_line.invoice.title"></span>
-                    </a>
-                    <div>
+              <td class="bordered farsi text-right">
+                <a :href="invoice_line.invoice_line_item.get_absolute_url">
+                  <div class="media text-right farsi">
+                    <img
+                      width="32"
+                      :src="invoice_line.invoice_line_item.thumbnail"
+                      alt=""
+                    />
+                    <div class="media-body mr-2">
                       <span
-                        v-text="invoice_line.invoice.persian_invoice_datetime"
+                        v-text="invoice_line.invoice_line_item.title"
                       ></span>
                     </div>
-                    <div class="row rtl">
-                      <div class="col-6">
-                        <a
-                          :href="invoice_line.invoice.bestankar.get_absolute_url"
-                        >
-                          <small>
-                            <span
-                              v-text="invoice_line.invoice.bestankar.title"
-                            ></span>
-                          </small>
-                        </a>
-                      </div>
-                      <div class="col-6">
-                        <a
-                          :href="invoice_line.invoice.bedehkar.get_absolute_url"
-                        >
-                          <small>
-                            <span
-                              v-text="invoice_line.invoice.bedehkar.title"
-                            ></span>
-                          </small>
-                        </a>
-                      </div>
-                    </div>
-                  </td>
-
-                  {% endif %}
-                  <td class="bordered farsi text-right">
-                    <span v-text="invoice_line.quantity"></span>
-                    <span v-text="invoice_line.unit_name"></span>
-                  </td>
-                  <td class="bordered farsi text-right">
-                    <div v-if="invoice_line.discount_percentage>0">
-                      <div
-                        style="text-decoration: line-through"
-                        v-text="to_price(invoice_line.unit_price)"
-                      ></div>
-                      <div
-                        v-text="to_price(invoice_line.unit_price*(100-invoice_line.discount_percentage)/100)"
-                      ></div>
-                    </div>
-                    <div v-if="invoice_line.discount_percentage==0">
-                      <span v-text="to_price(invoice_line.unit_price)"></span>
-                    </div>
-                  </td>
-
-                  <td class="bordered farsi text-right">
-                    <div v-if="invoice_line.discount_percentage>0">
-                      <span
-                        v-text="to_price(invoice_line.unit_price*(invoice_line.discount_percentage)/100)"
-                      ></span>
-                      <div
-                        v-if="invoice_line.discount_percentage>0"
-                        class="text-success"
-                      >
+                  </div>
+                </a>
+              </td>
+              {% endif %} {% if not invoice %}
+              <td class="bordered farsi text-right">
+                <a :href="invoice_line.invoice.get_absolute_url">
+                  <span v-text="invoice_line.invoice.title"></span>
+                </a>
+                <div>
+                  <span
+                    v-text="invoice_line.invoice.persian_invoice_datetime"
+                  ></span>
+                </div>
+                <div class="row rtl">
+                  <div class="col-6">
+                    <a :href="invoice_line.invoice.bestankar.get_absolute_url">
+                      <small>
                         <span
-                          v-text="to_price(invoice_line.discount_percentage)"
+                          v-text="invoice_line.invoice.bestankar.title"
                         ></span>
-                        %
-                      </div>
-                    </div>
-                    <div v-if="invoice_line.discount_percentage==0"></div>
-                  </td>
+                      </small>
+                    </a>
+                  </div>
+                  <div class="col-6">
+                    <a :href="invoice_line.invoice.bedehkar.get_absolute_url">
+                      <small>
+                        <span
+                          v-text="invoice_line.invoice.bedehkar.title"
+                        ></span>
+                      </small>
+                    </a>
+                  </div>
+                </div>
+              </td>
 
-                  <!-- <td class="bordered farsi text-right">
+              {% endif %}
+              <td class="bordered farsi text-right">
+                <span v-text="invoice_line.quantity"></span>
+                <span v-text="invoice_line.unit_name"></span>
+              </td>
+              <td class="bordered farsi text-right">
+                <div v-if="invoice_line.discount_percentage>0">
+                  <div
+                    style="text-decoration: line-through"
+                    v-text="to_price(invoice_line.unit_price)"
+                  ></div>
+                  <div
+                    v-text="to_price(invoice_line.unit_price*(100-invoice_line.discount_percentage)/100)"
+                  ></div>
+                </div>
+                <div v-if="invoice_line.discount_percentage==0">
+                  <span v-text="to_price(invoice_line.unit_price)"></span>
+                </div>
+              </td>
+
+              <td class="bordered farsi text-right">
+                <div v-if="invoice_line.discount_percentage>0">
+                  <span
+                    v-text="to_price(invoice_line.unit_price*(invoice_line.discount_percentage)/100)"
+                  ></span>
+                  <div
+                    v-if="invoice_line.discount_percentage>0"
+                    class="text-success"
+                  >
+                    <span
+                      v-text="to_price(invoice_line.discount_percentage)"
+                    ></span>
+                    %
+                  </div>
+                </div>
+                <div v-if="invoice_line.discount_percentage==0"></div>
+              </td>
+
+              <!-- <td class="bordered farsi text-right">
                                         <div>
                                             <span
                                                 v-text="to_price(invoice_line.unit_price*invoice_line.quantity)"></span>
@@ -157,132 +137,137 @@
                                         </div>
                                     </td> -->
 
-                  <td class="bordered farsi text-right">
-                    <div v-if="invoice_line.discount_percentage>0">
-                      <span
-                        style="text-decoration: line-through"
-                        v-text="to_price(invoice_line.unit_price*invoice_line.quantity)"
-                      ></span>
-                    </div>
+              <td class="bordered farsi text-right">
+                <div v-if="invoice_line.discount_percentage>0">
+                  <span
+                    style="text-decoration: line-through"
+                    v-text="to_price(invoice_line.unit_price*invoice_line.quantity)"
+                  ></span>
+                </div>
 
-                    <div>
-                      <span v-text="to_price(invoice_line.line_total)"></span>
-                    </div>
-                  </td>
-                </tr>
-                {% if invoice %}
+                <div>
+                  <span v-text="to_price(invoice_line.line_total)"></span>
+                </div>
+              </td>
+            </tr>
+            {% if invoice %}
 
-                <tr>
-                  <td colspan="5">
-                    <div class="text-left">جمع</div>
-                  </td>
+            <tr>
+              <td colspan="5">
+                <div class="text-left">جمع</div>
+              </td>
 
-                  <td class="bordered farsi text-right">
-                    <span v-text="to_price(sum_total())"></span>
-                  </td>
-                  <td></td>
-                </tr>
-                {% endif %} {% if invoice %} {% if invoice.ship_fee > 0 %}
+              <td class="bordered farsi text-right">
+                <span v-text="to_price(sum_total())"></span>
+              </td> 
+            </tr>
+            {% endif %} {% if invoice %} {% if invoice.ship_fee > 0 %}
 
-                <tr>
-                  <td colspan="5">
-                    <div class="text-left">هزینه ارسال</div>
-                  </td>
+            <tr>
+              <td colspan="5">
+                <div class="text-left">هزینه ارسال</div>
+              </td>
 
-                  <td class="bordered farsi text-right">
-                    <span> {{invoice.ship_fee|to_price}} </span>
-                  </td>
-                  <td></td>
-                </tr>
-                {% endif %} {% if invoice.tax_percent > 0 %}
+              <td class="bordered farsi text-right">
+                <span> {{invoice.ship_fee|to_price}} </span>
+              </td>
+              <td></td>
+            </tr>
+            {% endif %} {% if invoice.tax_percent > 0 %}
 
-                <tr>
-                  <td colspan="5">
-                    <div class="text-left">
-                      <span> {{invoice.tax_percent}} </span>
-                      درصد مالیات بر ارزش افزوده
-                    </div>
-                  </td>
+            <tr>
+              <td colspan="5">
+                <div class="text-left">
+                  <span> {{invoice.tax_percent}} </span>
+                  درصد مالیات بر ارزش افزوده
+                </div>
+              </td>
 
-                  <td class="bordered farsi text-right">
-                    <span> {{invoice.tax_amount|to_price}} </span>
-                  </td>
-                </tr>
-                {% endif %} {% if invoice.discount > 0 %}
+              <td class="bordered farsi text-right">
+                <span> {{invoice.tax_amount|to_price}} </span>
+              </td>
+            </tr>
+            {% endif %} {% if invoice.discount > 0 %}
 
-                <tr>
-                  <td colspan="5">
-                    <div class="text-left">تخفیف</div>
-                  </td>
+            <tr>
+              <td colspan="5">
+                <div class="text-left">تخفیف</div>
+              </td>
 
-                  <td class="bordered farsi text-right">
-                    <span> {{invoice.discount|to_price}} </span>
-                  </td>
-                </tr>
-                {% endif %}
-                <tr>
-                  <td colspan="5">
-                    <div class="text-left">
-                      قابل پرداخت : {{invoice.amount|to_horuf}} {{CURRENCY}}
-                    </div>
-                  </td>
+              <td class="bordered farsi text-right">
+                <span> {{invoice.discount|to_price}} </span>
+              </td>
+            </tr>
+            {% endif %}
+            <!-- <tr >
+              <td colspan="5">
+                <div class="text-left">
+                  قابل پرداخت : {{invoice.amount|to_horuf}} {{CURRENCY}}
+                </div>
+              </td>
 
-                  <td class="bordered filled farsi text-right">
-                    <span class="farsi text-right">
-                      {{invoice.amount|to_price}}
-                    </span>
-                  </td>
-                </tr>
+              <td class="bordered filled farsi text-right">
+                <span class="farsi text-right">
+                  {{invoice.amount|to_price}}
+                </span>
+              </td>
+            </tr> -->
 
-                {% endif %}
-              </tbody>
-              <tfoot>
-                <th colspan="1">
-                  <div class="text-left"></div>
-                </th>
+            {% endif %}
+          </tbody>
+          <tfoot>
+            <th colspan="1">
+              <div class="text-left"></div>
+            </th>
 
-                {% if not invoice_line_item %}
+            {% if not invoice_line_item %}
 
-                <th colspan="1">
-                  <div class="text-left"></div>
-                </th>
-                {% endif %} {% if not invoice %}
+            <th colspan="1">
+              <div class="text-left"></div>
+            </th>
+            {% endif %} {% if not invoice %}
 
-                <th colspan="1">
-                  <div class="text-left"></div>
-                </th>
+            <th colspan="1">
+              <div class="text-left"></div>
+            </th>
 
-                {% endif %}
+            {% endif %}
 
-                <th colspan="1">
-                  <div class="text-left"></div>
-                </th>
-                <th colspan="1">
-                  <div class="text-left"></div>
-                </th>
+            <th colspan="1">
+              <div class="text-left"></div>
+            </th>
+            <th colspan="1">
+              <div class="text-left"></div>
+            </th>
 
-                <th>
-                  <div>
-                    <span v-text="to_price(sum_prices())"></span>
-                  </div>
-                  <div class="text-danger">
-                    <span v-text="to_price(sum_discounts())"></span>
-                  </div>
-                </th>
+            <th>
+              <div class=" text-left">
+                جمع بدون تخفیف :
+                <span v-text="to_price(sum_prices())"></span>
+                {{CURRENCY}}
+              </div>
+              <div class="text-danger text-left">
+                 تخفیف :
+                 <span v-text="to_price(sum_discounts())"></span>
+              {{CURRENCY}}
+              </div>
+            </th>
 
-                <th>
-                  <div class="alert alert-success">
-                    <!-- <div style="text-decoration:  line-through;"
+            <th>
+              <div class="alert alert-success">
+                <!-- <div style="text-decoration:  line-through;"
                                         v-text="to_price(sum_prices())"></div> -->
 
-                    <span v-text="to_price(sum_total())"></span>
-                    <div>{{CURRENCY}}</div>
-                  </div>
-                </th>
-                <th></th>
-              </tfoot>
-            </table>
-          </div>
-        </div>
+                                        <div>
+                                         
+                <span v-text="to_price(sum_total())"></span>
+                  {{CURRENCY}}</div>
+              </div>
+            </th>
+            
+          </tfoot>
+        </table>
       </div>
     </div>
+  </div>
+</div>
