--- a/accounting/templates/accounting/account.html
+++ b/accounting/templates/accounting/account.html
@@ -7,8 +7,12 @@
         {% include "accounting/includes/account-app/card.html" %}
     </div>
 
-     <div class="col-md-12">
+    <div class="col-md-12">
         {% include "accounting/includes/accounts-app/template.html" %}
+    </div>
+
+    <div class="col-md-12">
+        {% include "accounting/includes/add-account-app/template.html" %}
     </div>
 
      
@@ -19,6 +23,8 @@
 
 
 {% block script %}
-        {% include "accounting/includes/accounts-app/script.html" %}
+{% include "accounting/includes/account-app/script.html" %}
+{% include "accounting/includes/accounts-app/script.html" %}
+{% include "accounting/includes/add-account-app/script.html" %}
 
 {% endblock script %}
