--- a/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
@@ -1,6 +1,5 @@
 <div id="invoice-lines-app" class="card">
   {% load to_price %}
-  
 
   <div class="card-body">
     <div class="table-responsive rtl">
@@ -34,34 +33,17 @@
           <tbody>
             <tr v-for="invoice_line in invoice_lines">
               <td class="bordered farsi text-right">
-                <a :href="invoice_line.get_absolute_url">
-                  <span v-text="invoice_line.row"></span>
-                </a>
+                <span v-text="invoice_line.row"></span>
               </td>
 
               {% if not invoice_line_item %}
 
               <td class="bordered farsi text-right">
-                <a :href="invoice_line.invoice_line_item.get_absolute_url">
-                  <div class="media text-right farsi">
-                    <img
-                      width="32"
-                      :src="invoice_line.invoice_line_item.thumbnail"
-                      alt=""
-                    />
-                    <div class="media-body mr-2">
-                      <span
-                        v-text="invoice_line.invoice_line_item.title"
-                      ></span>
-                    </div>
-                  </div>
-                </a>
+                <span v-text="invoice_line.invoice_line_item.title"></span>
               </td>
               {% endif %} {% if not invoice %}
               <td class="bordered farsi text-right">
-                <a :href="invoice_line.invoice.get_absolute_url">
-                  <span v-text="invoice_line.invoice.title"></span>
-                </a>
+                <span v-text="invoice_line.invoice.title"></span>
                 <div>
                   <span
                     v-text="invoice_line.invoice.persian_invoice_datetime"
@@ -69,22 +51,16 @@
                 </div>
                 <div class="row rtl">
                   <div class="col-6">
-                    <a :href="invoice_line.invoice.bestankar.get_absolute_url">
-                      <small>
-                        <span
-                          v-text="invoice_line.invoice.bestankar.title"
-                        ></span>
-                      </small>
-                    </a>
+                    <small>
+                      <span
+                        v-text="invoice_line.invoice.bestankar.title"
+                      ></span>
+                    </small>
                   </div>
                   <div class="col-6">
-                    <a :href="invoice_line.invoice.bedehkar.get_absolute_url">
-                      <small>
-                        <span
-                          v-text="invoice_line.invoice.bedehkar.title"
-                        ></span>
-                      </small>
-                    </a>
+                    <small>
+                      <span v-text="invoice_line.invoice.bedehkar.title"></span>
+                    </small>
                   </div>
                 </div>
               </td>
@@ -159,7 +135,7 @@
 
               <td class="bordered farsi text-right">
                 <span v-text="to_price(sum_total())"></span>
-              </td> 
+              </td>
             </tr>
             {% endif %} {% if invoice %} {% if invoice.ship_fee > 0 %}
 
@@ -241,15 +217,15 @@
             </th>
 
             <th>
-              <div class=" text-left">
+              <div class="text-left">
                 جمع بدون تخفیف :
                 <span v-text="to_price(sum_prices())"></span>
                 {{CURRENCY}}
               </div>
               <div class="text-danger text-left">
-                 تخفیف :
-                 <span v-text="to_price(sum_discounts())"></span>
-              {{CURRENCY}}
+                تخفیف :
+                <span v-text="to_price(sum_discounts())"></span>
+                {{CURRENCY}}
               </div>
             </th>
 
@@ -258,13 +234,12 @@
                 <!-- <div style="text-decoration:  line-through;"
                                         v-text="to_price(sum_prices())"></div> -->
 
-                                        <div>
-                                         
-                <span v-text="to_price(sum_total())"></span>
-                  {{CURRENCY}}</div>
+                <div>
+                  <span v-text="to_price(sum_total())"></span>
+                  {{CURRENCY}}
+                </div>
               </div>
             </th>
-            
           </tfoot>
         </table>
       </div>
