--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -1,4 +1,4 @@
-{% extends "accounting/layout.html" %}
+{% extends "phoenix/print-layout.html" %}
 
 {% block content %}
 <div class="row rtl farsi">
@@ -61,3 +61,7 @@
 {% include "accounting/includes/invoice-lines-app/script.html" %}
 {% include "accounting/includes/invoice-app/script.html" %}
 {% endblock script %}
+
+
+
+
