--- a/templates/phoenix/wide-layout.html
+++ b/templates/phoenix/wide-layout.html
@@ -14,14 +14,23 @@
     {% endblock style %}
 </head>
 
-<body class="farsi" >
-    
+<body class="farsi" {% if app_background_image %}
+    style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('{{app_background_image.image}}');background-size:cover"
+    {% endif %}>
+    {% if not NO_NAVBAR %}
+    {% include "phoenix/includes/navbar.html" %}
+    {% endif %}
+    <div class="my-3 {% if WIDE_LAYOUT %}mx-3{% else %}container{% endif %}">
 
         {% block content %}
 
         {% endblock content %}
+    </div>
 
-    
+    {% if not NO_FOOTER %}
+    {% include "phoenix/includes/footer.html" %}
+    {% endif %}
+
     {% csrf_token %}
     {% include "phoenix/includes/common-script.html" %}
     {% include "phoenix/includes/utility-script.html" %}
